force-app/main/default/objects/Case/fields/Additional_Adress__c.field-meta.xml
<CustomField>
    <fullName>Additional_Adress__c</fullName>
    <label>Additional Adress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>