force-app/main/default/objects/Case/fields/Attitude_Consommateur__c.field-meta.xml
<CustomField>
    <fullName>Attitude_Consommateur__c</fullName>
    <label>Attitude Consommateur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alerte l&apos;entreprise</fullName>
            </value>
            <value>
                <fullName>Compréhensif</fullName>
            </value>
            <value>
                <fullName>Ne doit pas se reproduire</fullName>
            </value>
            <value>
                <fullName>Agressif et revendicatif</fullName>
            </value>
            <value>
                <fullName>Fait du chantage</fullName>
            </value>
            <value>
                <fullName>Menace média etc...</fullName>
            </value>
            <value>
                <fullName>Connait les recours</fullName>
            </value>
            <value>
                <fullName>Epaulé par un avocat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>