force-app/main/default/objects/Case/fields/B_B_HOTELS_CLUB_ID__c.field-meta.xml
<CustomField>
    <fullName>B_B_HOTELS_CLUB_ID__c</fullName>
    <formula>Contact.E_club_card_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B&amp;B HOTELS CLUB ID</label>
    <type>Text</type>
</CustomField>