force-app/main/default/objects/Case/fields/Case_summary__c.field-meta.xml
<CustomField>
    <fullName>Case_summary__c</fullName>
    <label>Case summary</label>
    <type>TextArea</type>
</CustomField>