force-app/main/default/objects/Case/fields/Chambre_Familiale__c.field-meta.xml
<CustomField>
    <fullName>Chambre_Familiale__c</fullName>
    <label>Chambre Familiale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>