force-app/main/default/objects/Case/fields/Chambre_Simple__c.field-meta.xml
<CustomField>
    <fullName>Chambre_Simple__c</fullName>
    <label>Chambre Simple</label>
    <length>255</length>
    <type>Text</type>
</CustomField>