force-app/main/default/objects/Case/fields/Claim_Cause__c.field-meta.xml
<CustomField>
    <fullName>Claim_Cause__c</fullName>
    <label>Claim Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baulicher Mangel</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Dienstleister von B&amp;B</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>FinanceHead Office</fullName>
            </value>
            <value>
                <fullName>höhere Gewalt</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>nicht änderbare Gegebenheit</fullName>
            </value>
            <value>
                <fullName>Office Services</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>RenovationSales &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Selbstverschulden Gast</fullName>
            </value>
            <value>
                <fullName>Sonstiges</fullName>
            </value>
            <value>
                <fullName>Systemfehler (online)</fullName>
            </value>
            <value>
                <fullName>Technische/r Störung/Fehler</fullName>
            </value>
            <value>
                <fullName>Umweltschutz</fullName>
            </value>
            <value>
                <fullName>Allgemein / offen / unbekannt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>