force-app/main/default/objects/Case/fields/Compensation_type__c.field-meta.xml
<CustomField>
    <fullName>Compensation_type__c</fullName>
    <label>Compensation type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hotel Partial Refund</fullName>
            </value>
            <value>
                <fullName>Hotel Refund</fullName>
            </value>
            <value>
                <fullName>Head Office Partial Refund</fullName>
            </value>
            <value>
                <fullName>Head Office Refund</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
            </value>
            <value>
                <fullName>Voucher + Refund</fullName>
            </value>
            <value>
                <fullName>Clubcard</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>To be decided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>