force-app/main/default/objects/Case/fields/Compteur_case_ouvert__c.field-meta.xml
<CustomField>
    <fullName>Compteur_case_ouvert__c</fullName>
    <formula>if( ! ISBLANK(ClosedDate ),(DATEVALUE(ClosedDate)  - DATEVALUE(CreatedDate)),TODAY() - DATEVALUE(CreatedDate) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compteur case ouvert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>