force-app/main/default/objects/Case/fields/Confirmation_date__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_date__c</fullName>
    <label>Confirmation date</label>
    <type>Date</type>
</CustomField>