force-app/main/default/objects/Case/fields/Customer_feedback_reason__c.field-meta.xml
<CustomField>
    <fullName>Customer_feedback_reason__c</fullName>
    <label>Customer feedback reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARRIVAL</fullName>
            </value>
            <value>
                <fullName>OUTDOOR INSTALLATION</fullName>
            </value>
            <value>
                <fullName>EQUIPMENT</fullName>
            </value>
            <value>
                <fullName>BATHROOM</fullName>
            </value>
            <value>
                <fullName>BED</fullName>
            </value>
            <value>
                <fullName>BEDBUGS</fullName>
            </value>
            <value>
                <fullName>BONUSHEFT</fullName>
            </value>
            <value>
                <fullName>KIOSK</fullName>
            </value>
            <value>
                <fullName>CLUB CARD</fullName>
            </value>
            <value>
                <fullName>FLIGHT</fullName>
            </value>
            <value>
                <fullName>DOUBLE PAYMENT</fullName>
            </value>
            <value>
                <fullName>DISEASE</fullName>
            </value>
            <value>
                <fullName>CUSTOMER WRONGDOING</fullName>
            </value>
            <value>
                <fullName>WRONGDOING HOTEL</fullName>
            </value>
            <value>
                <fullName>FIRE ALARM</fullName>
            </value>
            <value>
                <fullName>FRIENDLINESS</fullName>
            </value>
            <value>
                <fullName>FRONT OFFICE</fullName>
            </value>
            <value>
                <fullName>EARLY BOOKING</fullName>
            </value>
            <value>
                <fullName>BREAKFAST</fullName>
            </value>
            <value>
                <fullName>BUILDING</fullName>
            </value>
            <value>
                <fullName>ODOUR</fullName>
            </value>
            <value>
                <fullName>SERVICE AGENT</fullName>
            </value>
            <value>
                <fullName>AIR CONDITIONER</fullName>
            </value>
            <value>
                <fullName>CREDIT CARD FEES</fullName>
            </value>
            <value>
                <fullName>NOISE</fullName>
            </value>
            <value>
                <fullName>SHOW NO</fullName>
            </value>
            <value>
                <fullName>OPENING HOURS</fullName>
            </value>
            <value>
                <fullName>ONLINE REGISTRATION</fullName>
            </value>
            <value>
                <fullName>CAR PARK</fullName>
            </value>
            <value>
                <fullName>PRICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>