force-app/main/default/objects/Case/fields/Customer_objection_channel__c.field-meta.xml
<CustomField>
    <fullName>Customer_objection_channel__c</fullName>
    <label>Customer objection channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>