force-app/main/default/objects/Case/fields/Customer_objection_date__c.field-meta.xml
<CustomField>
    <fullName>Customer_objection_date__c</fullName>
    <label>Customer objection date</label>
    <type>Date</type>
</CustomField>