force-app/main/default/objects/Case/fields/Customer_objection_description__c.field-meta.xml
<CustomField>
    <fullName>Customer_objection_description__c</fullName>
    <label>Customer objection description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>