force-app/main/default/objects/Case/fields/Damage_day__c.field-meta.xml
<CustomField>
    <fullName>Damage_day__c</fullName>
    <label>Damage day</label>
    <type>Date</type>
</CustomField>