force-app/main/default/objects/Case/fields/Damage_description__c.field-meta.xml
<CustomField>
    <fullName>Damage_description__c</fullName>
    <label>Damage description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>