force-app/main/default/objects/Case/fields/Date_of_stay__c.field-meta.xml
<CustomField>
    <fullName>Date_of_stay__c</fullName>
    <label>Date of stay</label>
    <type>Date</type>
</CustomField>