force-app/main/default/objects/Case/fields/E_club_ID__c.field-meta.xml
<CustomField>
    <fullName>E_club_ID__c</fullName>
    <label>E-club ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>