force-app/main/default/objects/Case/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>