force-app/main/default/objects/Case/fields/Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Fax_Number__c</fullName>
    <label>Fax Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>