force-app/main/default/objects/Case/fields/Gravit_Objective__c.field-meta.xml
<CustomField>
    <fullName>Gravit_Objective__c</fullName>
    <label>Gravité Objective</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Erreur entreprise</fullName>
            </value>
            <value>
                <fullName>Faute entreprise</fullName>
            </value>
            <value>
                <fullName>Dommage corp. sani. Moral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>