force-app/main/default/objects/Case/fields/Guest_Adress__c.field-meta.xml
<CustomField>
    <fullName>Guest_Adress__c</fullName>
    <description>Guest Account Adress</description>
    <label>Guest Adress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>