force-app/main/default/objects/Case/fields/Hotel_ID__c.field-meta.xml
<CustomField>
    <fullName>Hotel_ID__c</fullName>
    <label>Hotel ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>