force-app/main/default/objects/Case/fields/Hotel_Selected__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Selected__c</fullName>
    <label>Hotel Selected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aachen Wuerselen</fullName>
            </value>
            <value>
                <fullName>Aschaffenburg</fullName>
            </value>
            <value>
                <fullName>Augsburg</fullName>
            </value>
            <value>
                <fullName>Bad Homburg</fullName>
            </value>
            <value>
                <fullName>Baden Airpark</fullName>
            </value>
            <value>
                <fullName>Berlin Airport</fullName>
            </value>
            <value>
                <fullName>Berlin Alexanderplatz</fullName>
            </value>
            <value>
                <fullName>Berlin Potsdamer Platz</fullName>
            </value>
            <value>
                <fullName>Berlin Sued Genshagen</fullName>
            </value>
            <value>
                <fullName>Berlin Tiergarten</fullName>
            </value>
            <value>
                <fullName>Bielefeld</fullName>
            </value>
            <value>
                <fullName>Bochum Herne</fullName>
            </value>
            <value>
                <fullName>Boeblingen</fullName>
            </value>
            <value>
                <fullName>Bonn</fullName>
            </value>
            <value>
                <fullName>Braunschweig City</fullName>
            </value>
            <value>
                <fullName>Braunschweig Nord</fullName>
            </value>
            <value>
                <fullName>Bremen Hbf</fullName>
            </value>
            <value>
                <fullName>Darmstadt</fullName>
            </value>
            <value>
                <fullName>Dortmund City</fullName>
            </value>
            <value>
                <fullName>Dortmund Messe</fullName>
            </value>
            <value>
                <fullName>Dresden</fullName>
            </value>
            <value>
                <fullName>Duesseldorf Airport</fullName>
            </value>
            <value>
                <fullName>Duesseldorf City</fullName>
            </value>
            <value>
                <fullName>Duesseldorf Hbf</fullName>
            </value>
            <value>
                <fullName>Duisburg</fullName>
            </value>
            <value>
                <fullName>Erfurt</fullName>
            </value>
            <value>
                <fullName>Erlangen</fullName>
            </value>
            <value>
                <fullName>Essen</fullName>
            </value>
            <value>
                <fullName>Frankfurt City Ost</fullName>
            </value>
            <value>
                <fullName>Frankfurt Hahn Airport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>