force-app/main/default/objects/Case/fields/IATA_Agency_code__c.field-meta.xml
<CustomField>
    <fullName>IATA_Agency_code__c</fullName>
    <label>IATA / Agency code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>