force-app/main/default/objects/Case/fields/Imputation_Comptable__c.field-meta.xml
<CustomField>
    <fullName>Imputation_Comptable__c</fullName>
    <label>Imputation Comptable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hôtel</fullName>
            </value>
            <value>
                <fullName>Siège</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>