force-app/main/default/objects/Case/fields/Invitation__c.field-meta.xml
<CustomField>
    <fullName>Invitation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invitation</label>
    <referenceTo>Voucher__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Demande_Assistances</relationshipName>
    <type>Lookup</type>
</CustomField>