force-app/main/default/objects/Case/fields/Invoice_Nr__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Nr__c</fullName>
    <label>Invoice Nr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>