force-app/main/default/objects/Case/fields/Mode_paiement__c.field-meta.xml
<CustomField>
    <fullName>Mode_paiement__c</fullName>
    <label>Mode paiement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chèque</fullName>
            </value>
            <value>
                <fullName>TPE</fullName>
            </value>
            <value>
                <fullName>Virement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>