force-app/main/default/objects/Case/fields/Montant_Rbt__c.field-meta.xml
<CustomField>
    <fullName>Montant_Rbt__c</fullName>
    <label>Montant Rbt</label>
    <length>50</length>
    <type>Text</type>
</CustomField>