force-app/main/default/objects/Case/fields/Motif__c.field-meta.xml
<CustomField>
    <fullName>Motif__c</fullName>
    <label>Motif</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>...</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>