force-app/main/default/objects/Case/fields/MOTIFS_2__c.field-meta.xml
<CustomField>
    <fullName>MOTIFS_2__c</fullName>
    <label>MOTIFS 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Motifs</valueSetName>
    </valueSet>
</CustomField>