force-app/main/default/objects/Case/fields/MOTIFS_3__c.field-meta.xml
<CustomField>
    <fullName>MOTIFS_3__c</fullName>
    <label>MOTIFS 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Motifs</valueSetName>
    </valueSet>
</CustomField>