force-app/main/default/objects/Case/fields/MOTIFS__c.field-meta.xml
<CustomField>
    <fullName>MOTIFS__c</fullName>
    <label>MOTIFS 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4000</fullName>
                <label>Demande annulation</label>
            </value>
            <value>
                <fullName>4001</fullName>
                <label>Garantie CL annulée par hôtel</label>
            </value>
            <value>
                <fullName>4002</fullName>
                <label>Résa annulée par l&apos;hôtel</label>
            </value>
            <value>
                <fullName>4003</fullName>
                <label>Demande modification</label>
            </value>
            <value>
                <fullName>4004</fullName>
                <label>Bug CL</label>
            </value>
            <value>
                <fullName>4005</fullName>
                <label>CB expirée</label>
            </value>
            <value>
                <fullName>4006</fullName>
                <label>Plafond CB atteint</label>
            </value>
            <value>
                <fullName>4007</fullName>
                <label>Régularisation CL</label>
            </value>
            <value>
                <fullName>4008</fullName>
                <label>Régularisation autre CB</label>
            </value>
            <value>
                <fullName>4009</fullName>
                <label>Demande de factures</label>
            </value>
            <value>
                <fullName>4010</fullName>
                <label>Débit inexpliqué</label>
            </value>
            <value>
                <fullName>4011</fullName>
                <label>Demande de relevé mensuel</label>
            </value>
            <value>
                <fullName>4012</fullName>
                <label>Erreur dans relevé mensuel</label>
            </value>
            <value>
                <fullName>4013</fullName>
                <label>Problème Identification/Internet</label>
            </value>
            <value>
                <fullName>4014</fullName>
                <label>Remerciements</label>
            </value>
            <value>
                <fullName>4015</fullName>
                <label>Personnel accueillant</label>
            </value>
            <value>
                <fullName>4016</fullName>
                <label>Satisfait du produit</label>
            </value>
            <value>
                <fullName>4017</fullName>
                <label>Compliment sur la réponse</label>
            </value>
            <value>
                <fullName>4018</fullName>
                <label>Impayé Eclub</label>
            </value>
            <value>
                <fullName>4019</fullName>
                <label>Divers Avis Clients</label>
            </value>
            <value>
                <fullName>4020</fullName>
                <label>Attend son dédommagement</label>
            </value>
            <value>
                <fullName>4021</fullName>
                <label>Insatisfait réponse gérant</label>
            </value>
            <value>
                <fullName>4022</fullName>
                <label>Oups, double résa</label>
            </value>
            <value>
                <fullName>4023</fullName>
                <label>Résa partielle</label>
            </value>
            <value>
                <fullName>4024</fullName>
                <label>Autre bug</label>
            </value>
            <value>
                <fullName>4025</fullName>
                <label>Debit frauduleux</label>
            </value>
            <value>
                <fullName>4026</fullName>
                <label>Breaks</label>
            </value>
            <value>
                <fullName>4027</fullName>
                <label>Early</label>
            </value>
            <value>
                <fullName>4028</fullName>
                <label>Go</label>
            </value>
            <value>
                <fullName>4029</fullName>
                <label>Best Price</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>