force-app/main/default/objects/Case/fields/Nombre_de_nuits__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_nuits__c</fullName>
    <label>Nombre de nuits</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>