force-app/main/default/objects/Case/fields/OBJETS_3__c.field-meta.xml
<CustomField>
    <fullName>OBJETS_3__c</fullName>
    <label>OBJETS 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Objets</valueSetName>
    </valueSet>
</CustomField>